# site

./: .gitignore  Cargo.toml  README.md
content/: about.md  fasta_windows - 09.04.2022.md  first blog post - 01.04.2022.md  my nushell config - 16.04.2022.md  research.md  tree of the British flora - 06.10.2023.md
content/public/: index.html
public/: about.html  fasta_windows - 09.04.2022.html  first blog post - 01.04.2022.html  index.html  my nushell config - 16.04.2022.html  research.html  tree of the British flora - 06.10.2023.html
src/: lib.rs  main.rs  template.rs
src/public/: index.html
