[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
axum = "0.5.0"
anyhow = "1.0.56"
pulldown-cmark = "0.9.1"
walkdir = "2"
pico-args = "0.4.2"
tracing-appender = "0.2.2"
